add new organization for implementation part

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -146,9 +146,7 @@ front-end in the system.\\
 \input{chapters/cap_lte}
 
 \part{Implementation}
-\input{chapters/cap_fmcomms2}
-\input{chapters/cap_fpga}
-\input{chapters/cap_setup}
+\input{chapters/cap_implementation}
 
 \part{Final Results}
 \input{chapters/cap_results}
