--- a/references.bib
+++ b/references.bib
@@ -38,6 +38,16 @@
   year =    {2012}
 }
 
+@INPROCEEDINGS{chamberlain2005,
+author={M. W. Chamberlain},
+booktitle={Military Communications Conference, 2005. MILCOM 2005. IEEE},
+title={A software defined HF radio},
+year={2005},
+pages={2448-2453 Vol. 4},
+keywords={military communication;software architecture;software radio;telecommunication channels;HF communication;MPR;SDR;hardware technology;manpack radio;military radio system;multiple channel;scalability;software aspect;software defined radio;Computer architecture;Cryptography;Field programmable gate arrays;Hardware;Microcomputers;Modems;Radio frequency;Signal processing;Software performance;Software radio},
+doi={10.1109/MILCOM.2005.1606035},
+month={Oct},}
+
 %%-----------------------------------------------------------------------------
 
 
