--- a/references.bib
+++ b/references.bib
@@ -91,15 +91,21 @@ month={Oct},}
 
 %%techreport%%-----------------------------------------------------------------
 
-@techreport{tno_gfast,
- 	Address = {The Netherlands},
- 	Author = {Rob F.M. van den Brink},
- 	Date-Added = {2013-07-23 15:42:54 +0000},
- 	Date-Modified = {2013-08-12 14:59:00 +0000},
- 	Institution = {{TNO}}, 	Month = {apr.},
-	Title = {Enabling 4{GBB} via the last copper drop of a hybrid {F}tt{H} deployment},
-	Type = {White paper on {DSL}},
+@techreport{introlte,
+ 	Address = {Sweden},
+ 	Author = {Ericsson},
+ 	Institution = {{Ericsson}}, 	Month = {apr.},
+	Title = {{LTE} : An Introduction},
+	Type = {White paper on {LTE}},
  	Year = {2011}}
+
+@techreport{umtslte,
+  Address = {Muchen, Germany},
+  Author = {C. Gessner, A. Roessler, M. Kottkamp},
+  Institution = {{Rohde-Schwarz}}, 	Month = {jul.},
+  Title = {{LTE} Technology Introduction},
+  Type = {Application Notes on {LTE}},
+  Year = {2012}}
 
 %%-----------------------------------------------------------------------------
 
