change names in the tcc beginning

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -10,7 +10,7 @@
 \ufpaOrientador{Prof. Aldebaro Barreto da Rocha Klautau Junior}
 \ufpaCoordenadorCurso{Prof. Francisco Carlos Bentes Frey Muller}
 
-\ufpaCoOrientador{Prof. Wilson Pacheco Ferreira}
+\ufpaCoOrientador{Eng. Igor Auad Freire}
 \ufpaMembroBancaA{Prof. Francisco Carlos Bentes Frey Muller}
 \ufpaMembroBancaB{Eng. Igor Mesquita de Almeida}
 
