--- a/packages.tex
+++ b/packages.tex
@@ -32,6 +32,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{units}
+\usepackage{adjustbox}
 
 %\usepackage[backend=bibtex8]{biblatex}
 
