made tables fit page with adjustbox

--- a/appendix/append_ad9361_driver.tex
+++ b/appendix/append_ad9361_driver.tex
@@ -32,7 +32,7 @@ adi,frequency-division-duplex-independent-mode-enable & frequency\_division\_dup
 
 \begin{table}[]
 \centering
-\caption{My caption}
+\begin{adjustbox}{width=1\textwidth}
 \label{my-label}
 \begin{tabular}{|l|l|l|}
 \hline
@@ -47,4 +47,6 @@ adi,trx-synthesizer-target-fref-overwrite-hz & trx\_synthesizer\_target\_fref\_o
 adi,external-tx-lo-enable                    & external\_tx\_lo\_enable                          & Enables external LO for TX                                                             \\ \hline
 adi,external-rx-lo-enable                    & external\_rx\_lo\_enable                          & Enables external LO for RX                                                             \\ \hline
 \end{tabular}
+\end{adjustbox}
+\caption{lol}
 \end{table}
