removed the appendixes

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -175,10 +175,10 @@ front-end in the system.\\
 %   Apêndices    %
 %%%%%%%%%%%%%%%%%%%%%
 
-\appendix
-\input{appendix/append_pll}
-\input{appendix/append_fpga_flow}
-\input{appendix/append_ad9361_driver}
+%\appendix
+%\input{appendix/append_pll}
+%\input{appendix/append_fpga_flow}
+%\input{appendix/append_ad9361_driver}
 
 %%%%%%%%%%%%%%%%%%%%%
 %   Página em branco    %
