--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -84,6 +84,57 @@ Viva como se voce fosse morrer amanha. Aprenda como se voce fosse viver para sem
 
 \begin{ufpaResumo}
 
+A evolu\c{c}\~{a}o dos servi\c{c}os m\'{o}veis em termos de tecnologias de acesso e as camadas
+de aplica\c{c}\~{a}o est\'{a} impulsionando uma enorme mudan\c{c}a nos sistemas de comunica\c{c}ões
+m\'{o}veis. Um tema que t\^{o}m estado em alta recentemente no campo \'{e} a ascens\~{a}o do
+paradigma da computa\c{c}\~{a}o em nuvem, assim, a ideia conhecida como redes de acesso
+de r\'{a}dio em nuvem (Cloud-RAN) est\'{a} crescendo na ind\'{u}stria. Este comportamento
+vem do potencial de cloudifica\c{c}\~{a}o, ou seja transferir os servi\c{c}os locais para
+aplica\c{c}ões me nuvem, fato que impulsionaria uma de melhoria na efici\^{o}ncia da
+aloca\c{c}\~{a}o de recursos, gest\~{a}o e consumo de energia, aspectos inerentes da RANs
+tradicionais.
+
+Assim, com o surgimento de C-RAN, v\'{a}rios questionamentos sobre como implementar
+e quais ferramentas usar surgem naturalmente. Este trabalho tem como objetivo
+avaliar o potencial de uma interface de r\'{a}dio fronthaul program\'{a}vel, como \'{e}
+conhecido, os equipamentos em uso nas atuais redes n\~{a}o t\^{o}m a capacidade
+adaptativa necess\'{a}rio para o C-RAN. Para este trabalho uma configura\c{c}\~{a}o de uma
+unidade de r\'{a}dio, composto por uma FPGA (um atuando como o "front-end digital"
+da unidade de r\'{a}dio), um transceiver (front-end anal\'{o}gico). Dentro desta
+configura\c{c}\~{a}o v\'{a}rios algoritmos podem ser testados e podem ser avaliados em
+cen\'{a}rios LTE porque o emissor-receptor funciona em LTE e \'{e} configur\'{a}vel,
+permitindo seu uso em C-RAN.
+
+Este trabalho deve concentrar-se na avalia\c{c}\~{a}o da interface de r\'{a}dio e realizar
+os testes a ela inerentes, explorando adaptabilidade FPGA e paralelismo com os
+protocolos de comunica\c{c}\~{a}o interna e externa, e assim explorar as vantagens do
+transceptor utilizado, a placa de desenvolvimento fmcomms2 (chip AD9361) a
+partir de dispositivos anal\'{o}gicos, que \'{e} um dispositivo usado amplamente em
+r\'{a}dios definidos por software, tal como \'{e} conhecido como USRPs (Universal
+Software Radio perif\'{e}rica).
+
+Um aspecto do transceptor que \'{e} muito atraente para o paradigma C-RAN \'{e} a sua
+configura\c{c}\~{a}o e escalabilidade, capaz de ajustes em tempo real na frequ\^{o}ncia de
+amostragem ou o modo de opera\c{c}\~{a}o a partir de 2x2 para 4x4 MIMO (m\'{u}ltiplas
+entradas e sa\'{i}das m\'{u}ltiplas), este real tempo caracter\'{i}stica adaptativa \'{e} ideal
+para ambiente de C-RAN.
+
+Os resultados s\~{a}o gerados visando essencialmente uma fidelidade nos sinais
+transmitidos e do receptor, depois de estes resultados s\~{a}o conclusivos \'{e}
+poss\'{i}vel proceder a ensaios e m\'{e}todos da presente configura\c{c}\~{a}o mais complexa.
+Outro teste feito foi a an\'{a}lise da sincroniza\c{c}\~{a}o entre o receptor e
+emissor-receptor utilizando um emulador cipri implementadas na l\'{o}gica do FPGA,
+que \'{e} a interface fronthaul padr\~{a}o, neste ensaio, \'{e} poss\'{i}vel observar as
+vantagens do front-end r\'{a}dio program\'{a}vel no sistema.
+
+Este trabalho \'{e} composto de dois cap\'{i}tulos de revis\~{a}o bibliogr\'{a}fica, um falando
+sobre r\'{a}dios definidos por software, e outro falando sobre o padr\~{a}o LTE. H\'{a} um
+cap\'{i}tulo reservado para descrever as caracter\'{i}sticas dos componentes e do
+desenvolvimento do prot\'{o}tipo em si e ap\'{o}s uma cap\'{i}tulo reservado aos resultados
+obtidos no trabalho. Pro fim h\'{a} um cap\'{i}tulo de conclus\~{a}o e trabalhos futuros,
+explicando como esse trabalho pode ser expandido.
+
+
 
 \end{ufpaResumo}
 
@@ -172,7 +223,7 @@ front-end in the system.\\
 \clearpage
 
 %%%%%%%%%%%%%%%%%%%%%
-%   Apêndices    %
+%   Ap\^{o}ndices    %
 %%%%%%%%%%%%%%%%%%%%%
 
 %\appendix
@@ -181,7 +232,7 @@ front-end in the system.\\
 %\input{appendix/append_ad9361_driver}
 
 %%%%%%%%%%%%%%%%%%%%%
-%   Página em branco    %
+%   P\'{a}gina em branco    %
 %%%%%%%%%%%%%%%%%%%%%
 
 \newpage
