added xilinx and digital communications  references

--- a/references.bib
+++ b/references.bib
@@ -75,6 +75,13 @@ month={Oct},}
   author =    {Clive Maxfield}
 }
 
+@Book{sklar2004,
+  title =     {Digital Communications: Fundamentals and Applications (2nd Edition)},
+  publisher = {Prentice Hall},
+  year =      {2001},
+  author =    {Bernard Sklar}
+}
+
 %%-----------------------------------------------------------------------------
 
 %%thesis%%---------------------------------------------------------------------
@@ -156,6 +163,14 @@ month={Oct},}
 }
 
 
+@Manual{xilinx:ublaxe,
+  title =        {MicroBlaze Processor Reference Guide},
+  organization = {xilinx},
+  edition =      {v10.3},
+  month =        oct,
+  year =         {2009}
+}
+
 @Manual{xilinx:axigpio,
   title =        {LogiCORE IP AXI GPIO},
   organization = {xilinx},
@@ -173,6 +188,13 @@ month={Oct},}
   year =         {2015}
 }
 
+@Manual{xilinx:axiuart,
+  title =        {AXI UART Lite},
+  organization = {xilinx},
+  edition =      {v2.0},
+  month =        nov,
+  year =         {2015}
+}
 
 @Manual{xilinx:fifo,
   title =        {LogiCORE IP FIFO Generator},
@@ -180,6 +202,14 @@ month={Oct},}
   edition =      {v 12.0},
   month =        jun,
   year =         {2015}
+}
+
+@Manual{xilinx:mig7,
+  title =        {7 Series FPGAs Memory Interface Solutions},
+  organization = {Xilinx},
+  edition =      {v1.3},
+  month =        jan,
+  year =         {2012}
 }
 
 
@@ -224,13 +254,6 @@ month={Oct},}
 
 %%misc%%-----------------------------------------------------------------------
 
-@misc{CD4007,
- 	author={Texas Instruments},
-title={CD4007UB},
-howpublished = "site usar package url",
-note={original document from Harris Semiconductor},
-publisher={Texas Instruments},
-year={2012} }
 
 %%-----------------------------------------------------------------------------
 
@@ -258,6 +281,16 @@ year={2012} }
   year = 2016,
   url = {http://gnuradio.org/},
   urldate = {2016-03-20}
+
+
+}
+
+@online{ocw:digicomm,
+  Author = {Hari Balakrishnan, George Verghese},
+  Year = {2012},
+  Title = {Introduction to EECS II: Digital Communication Systems, Fall 2012. (Massachusetts Institute of Technology: MIT OpenCourseWare)},
+  url = {http://ocw.mit.edu},
+  urldate = {2016-04-18}
 }
 
 %%-----------------------------------------------------------------------------
