fix sklar reference and add ad9361 wiki reference

--- a/references.bib
+++ b/references.bib
@@ -75,7 +75,7 @@ month={Oct},}
   author =    {Clive Maxfield}
 }
 
-@Book{sklar2004,
+@Book{sklar2001,
   title =     {Digital Communications: Fundamentals and Applications (2nd Edition)},
   publisher = {Prentice Hall},
   year =      {2001},
@@ -259,6 +259,14 @@ month={Oct},}
 
 %%websites%%-------------------------------------------------------------------
 
+@online{web:ad9361wiki,
+  author = {Analog Devices},
+  title = {{AD9361 and AD9364}},
+  year = 2015,
+  url = {https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz/ad9361},
+  urldate = {2016-05-09}
+}
+
 @online{web:sdrforum,
   author = {Wireless Innovation Forum},
   title = {Wireless Innovation Forum},
@@ -281,8 +289,6 @@ month={Oct},}
   year = 2016,
   url = {http://gnuradio.org/},
   urldate = {2016-03-20}
-
-
 }
 
 @online{ocw:digicomm,
