add dirtytalk package to be able to use \say{}

--- a/packages.tex
+++ b/packages.tex
@@ -33,6 +33,7 @@
 \usepackage{subcaption}
 \usepackage{units}
 \usepackage{adjustbox}
+\usepackage{dirtytalk}
 
 %\usepackage[backend=bibtex8]{biblatex}
 
