--- a/siglas.tex
+++ b/siglas.tex
@@ -29,5 +29,63 @@
 	\item ASIC - \textit{Application Specific Integrated Circuit}
 	\item SDR - \textit{Software Defined Radio}
 	\item RAN - \textit{Radio Access Network}
-	\item RAN - \textit{Radio Access Network}
+	\item FSK - \textit{Frequency-shift keying}
+	\item PSK - \textit{Phase-shift keying}
+	\item AM - \textit{Amplitude Modulation}
+	\item FM - \textit{Frequency Modulation}
+	\item PC - \textit{Personal Computer}
+	\item FDM - \textit{Frequency-division Multiplexing}
+	\item TDM - \textit{Time-division Multiplexing}
+	\item VLSI - \textit{Very-large-scale Integration}
+	\item OFDM - \textit{Orthogonal Frequency-division Multiplexing}
+	\item 3GPP - \textit{The 3rd Generation Partnership Project}
+	\item EPC - \textit{Evolved Packet Core}
+	\item SAE - \textit{System Architecture Evolution}
+	\item GSM - \textit{Global System for Mobile Communications}
+	\item CDMA - \textit{Code division multiple access}
+	\item W-CDMA - \textit{Wideband Code division multiple access}
+	\item UMTS - \textit{Universal Mobile Telecommunications System}
+	\item QoS - \textit{Quality of Service}
+	%\item ULTRA - \textit{Radio Access Network}
+	\item HSPA - \textit{High Speed Packet Access}
+	\item DVB - \textit{Digital Video Broadcasting}
+	\item DVA - \textit{Digital Voice Announcer}
+	\item QPSK - \textit{Quadrature Phase Shift Keying}
+	\item QAM - \textit{Quadrature Amplitude Modulation}
+	\item SC-FDMA - \textit{Single-carrier Frequency-division Multiple Access}
+	\item PAPR - \textit{Peak-to-Average Power Ratio}
+	\item WLAN - \textit{Wireless Local Area Network}
+	\item WiMAX - \textit{Worldwide Interoperability for Microwave Access}
+	\item FFT - \textit{Fast Fourier Transform}
+	\item IFFT - \textit{Inverse Fast Fourier Transform}
+	\item NodeB - \textit{UMTS equivalent to Base Station (GSM)}
+	\item ENodeB - \textit{Evolved NodeB}
+	\item PDSCH - \textit{Physical Downlink Shared Channel}
+	\item DFT - \textit{Discrete Fourier Transform}
+	\item TCL - \textit{Tool Command Language}
+	\item BIST - \textit{BUilt-in Self Test}
+	\item LNA - \textit{Low-Noise Amplifier}
+	\item I/O - \textit{Input - Output}
+	\item DCXO - \textit{Digitally Controlled Crystal Oscillator}
+	\item TX - \textit{Transmitter}
+	\item RX - \textit{Receiver}
+	\item ENSM - \textit{Enable State Machine}
+	\item MSPS - \textit{Mega Samples per Second}
+	\item API - \textit{Application Program Interface}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
+	%\item RAN - \textit{Radio Access Network}
 \end{enumerate}
