fix some letter size in references

--- a/references.bib
+++ b/references.bib
@@ -4,14 +4,14 @@
 
 @Article{kelley2009,
   author =  {Brian Kelley},
-  title =   {Software Defined Radio for Broadband OFDM Protocols},
+  title =   {Software Defined Radio for Broadband {OFDM} Protocols},
   journal = {IEEE International Conference on Systems, Man, and Cybernetics},
   year =    {2009}
 }
 
 @Article{neenu2014,
   author =  {Neenu Joseph and Dr. P Nirmal Kumar},
-  title =   {FPGA based Realization of OFDM Transceiver system for Software Defined Radio},
+  title =   {{FPGA} based Realization of {OFDM} Transceiver system for Software Defined Radio},
   journal = {2nd International Conference on Devices, Circuits and Systems (ICDCS)},
   year =    {2014}
 }
@@ -41,7 +41,7 @@
 @INPROCEEDINGS{chamberlain2005,
 author={M. W. Chamberlain},
 booktitle={Military Communications Conference, 2005. MILCOM 2005. IEEE},
-title={A software defined HF radio},
+title={A software defined {HF} radio},
 year={2005},
 pages={2448-2453 Vol. 4},
 keywords={military communication;software architecture;software radio;telecommunication channels;HF communication;MPR;SDR;hardware technology;manpack radio;military radio system;multiple channel;scalability;software aspect;software defined radio;Computer architecture;Cryptography;Field programmable gate arrays;Hardware;Microcomputers;Modems;Radio frequency;Signal processing;Software performance;Software radio},
@@ -88,7 +88,7 @@ month={Oct},}
 
 @MastersThesis{master:freire,
   author = {Igor Antonio Auad Freire},
-  title =  {FPGA Implementation and Evaluation of Synchronization Architectures for Ethernet-based Cloud-RAN Fronthaul},
+  title =  {{FPGA} Implementation and Evaluation of Synchronization Architectures for Ethernet-based Cloud-RAN Fronthaul},
   school = {Federal University of Para},
   year =   {2016},
   month =  feb
