add better quoting package

--- a/packages.tex
+++ b/packages.tex
@@ -34,6 +34,7 @@
 \usepackage{units}
 \usepackage{adjustbox}
 \usepackage{dirtytalk}
+\usepackage{csquotes}
 
 %\usepackage[backend=bibtex8]{biblatex}
 
