add E-ULTRA acronym

--- a/siglas.tex
+++ b/siglas.tex
@@ -46,7 +46,7 @@
 	\item W-CDMA - \textit{Wideband Code division multiple access}
 	\item UMTS - \textit{Universal Mobile Telecommunications System}
 	\item QoS - \textit{Quality of Service}
-	%\item ULTRA - \textit{Radio Access Network}
+	\item E-ULTRA - \textit{Evolved UMTS Terrestrial Radio Access}
 	\item HSPA - \textit{High Speed Packet Access}
 	\item DVB - \textit{Digital Video Broadcasting}
 	\item DVA - \textit{Digital Voice Announcer}
