fix label of microblaze reference

--- a/references.bib
+++ b/references.bib
@@ -163,7 +163,7 @@ month={Oct},}
 }
 
 
-@Manual{xilinx:ublaxe,
+@Manual{xilinx:ublaze,
   title =        {MicroBlaze Processor Reference Guide},
   organization = {xilinx},
   edition =      {v10.3},
