added reference to fmcomms2 wiki

--- a/references.bib
+++ b/references.bib
@@ -259,6 +259,16 @@ month={Oct},}
 
 %%websites%%-------------------------------------------------------------------
 
+https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz
+
+@online{web:fmcomms2wiki,
+  author = {Analog Devices},
+  title = {{AD-FMCOMMS2-EBZ User Guide}},
+  year = 2016,
+  url = {https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz},
+  urldate = {2016-05-18}
+}
+
 @online{web:ad9361wiki,
   author = {Analog Devices},
   title = {{AD9361 and AD9364}},
