add references of ad9361 wiki and this project repository

--- a/references.bib
+++ b/references.bib
@@ -309,4 +309,29 @@ https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz
   urldate = {2016-04-18}
 }
 
+@online{web:gitproject,
+  Author = {Gabriel Peixoto},
+  Year = {2016},
+  Title = {{Vivado\_Projects Github Page}},
+  url = {https://github.com/gaburiero/vivado_projects},
+  urldate = {2016-05-18}
+}
+
+@online{web:gitanalogdevlte,
+  Author = {Analog Devices},
+  Year = {2016},
+  Title = {{Analog Devices mathworks\_tools Github Page}},
+  url = {https://github.com/analogdevicesinc/MathWorks_tools},
+  urldate = {2016-05-18}
+}
+
+https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz/software/datafiles
+
+@online{web:analogmatlabwiki,
+  Author = {Analog Devices},
+  Year = {2016},
+  Title = {{AD-FMCOMMS2/3/4 Datafiles}},
+  url = {https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz/software/datafiles},
+  urldate = {2016-05-18}
+}
 %%-----------------------------------------------------------------------------
