add reference of analog devices lte example

--- a/references.bib
+++ b/references.bib
@@ -334,4 +334,12 @@ https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz/software/data
   url = {https://wiki.analog.com/resources/eval/user-guides/ad-fmcomms2-ebz/software/datafiles},
   urldate = {2016-05-18}
 }
+
+@online{web:lteexamplewiki,
+  Author = {Analog Devices},
+  Year = {2016},
+  Title = {{LTE Transmitter and Receiver Example}},
+  url = {https://wiki.analog.com/resources/tools-software/linux-software/libiio/clients/lte_example},
+  urldate = {2016-05-20}
+}
 %%-----------------------------------------------------------------------------
